# GraphicsCW

./: README.md  castle.kcply
graphics_lib/: Cargo.toml
graphics_lib/src/: camera.rs  cameras.rs  color.rs  constants.rs  false_color_material.rs  fibonacci_spiral.rs  frame_buffer.rs  hit.rs  lib.rs  lights.rs  line_drawer.rs  material.rs  materials.rs  object.rs  objects.rs  photon.rs  poly_mesh.rs  primitives.rs  ray.rs  scene.rs  simple_color_material.rs  sphere.rs  transform.rs  vector.rs  vertex.rs
graphics_lib/src/cameras/: camera.rs  dof_camera.rs  normal_camera.rs
graphics_lib/src/lights/: directional_light.rs  light.rs  point_light.rs
graphics_lib/src/materials/: ambient_material.rs  blinn_phong_material.rs  compound_material.rs  diffuse_material.rs  false_color_material.rs  material.rs  reflective_material.rs  simple_color_material.rs  specular_material.rs  transparent_material.rs  trasparent_material.rs
graphics_lib/src/objects/: csg.rs  cube.rs  object.rs  plane.rs  poly_mesh.rs  quadratic.rs  sphere.rs
graphics_lib/src/primitives/: plane.rs  primitive.rs  quadratic.rs  sphere.rs  triangle.rs
lab_1/: Cargo.toml
lab_1/src/: main.rs
lab_2/: Cargo.toml
lab_2/src/: main.rs
lab_3/: Cargo.toml
lab_3/src/: main.rs
lab_4/: Cargo.toml
lab_4/src/: main.rs
main/: Cargo.toml
main/src/: main.rs
